// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createDualTokenOrderBook 1`] = `
Array [
  Array [
    true,
    0.0006,
    21.6,
    "pair",
  ],
  Array [
    true,
    0.0001,
    21.6,
    "pair",
  ],
  Array [
    true,
    -0.0004,
    21.6,
    "pair",
  ],
]
`;

exports[`placeOrder, invalid token 1`] = `[Error: invalid token]`;

exports[`placeOrder, no takerAssetAmount 1`] = `[Error: invalid amount]`;

exports[`placeOrder, rawOrder validation error 1`] = `[Error: validation not passed]`;

exports[`placeOrder, rawOrder validation passed no ws client 1`] = `[Error: no client initiated]`;

exports[`placeOrder, success 1`] = `
Array [
  Array [
    "{\\"method\\":\\"add\\",\\"channel\\":\\"orders\\",\\"pair\\":\\"aETH|WETH\\",\\"orderHash\\":\\"orderHash\\",\\"order\\":{\\"exchangeAddress\\":\\"exchangeAddress\\",\\"expirationTimeSeconds\\":\\"1234567890\\",\\"feeRecipientAddress\\":\\"feeRecipientAddress\\",\\"makerAddress\\":\\"makerAddress\\",\\"makerAssetAmount\\":\\"123\\",\\"makerAssetData\\":\\"makerAssetData\\",\\"makerFee\\":\\"0\\",\\"salt\\":\\"789\\",\\"senderAddress\\":\\"senderAddress\\",\\"signature\\":\\"signature\\",\\"takerAddress\\":\\"takerAddress\\",\\"takerAssetAmount\\":\\"456\\",\\"takerAssetData\\":\\"takerAssetData\\",\\"takerFee\\":\\"0\\"}}",
  ],
]
`;

exports[`placeOrder, success 2`] = `
Array [
  Array [
    "aETH",
  ],
]
`;

exports[`placeOrder, success 3`] = `
Array [
  Array [
    "aETH|WETH",
    true,
    "0xd0a1e359811322d97991e03f863a0c30c2cf029c",
    "0xaddress",
    10,
    10,
    1545897600,
  ],
]
`;

exports[`placeOrder, success 4`] = `
Array [
  Array [
    "aETH|WETH",
    "orderHash",
    Object {
      "exchangeAddress": "exchangeAddress",
      "expirationTimeSeconds": "1234567890",
      "feeRecipientAddress": "feeRecipientAddress",
      "makerAddress": "makerAddress",
      "makerAssetAmount": "123",
      "makerAssetData": "makerAssetData",
      "makerFee": "0",
      "salt": "789",
      "senderAddress": "senderAddress",
      "signature": "signature",
      "takerAddress": "takerAddress",
      "takerAssetAmount": "456",
      "takerAssetData": "takerAssetData",
      "takerFee": "0",
    },
  ],
]
`;

exports[`placeOrder, throw error inValid Pair 1`] = `[Error: invalid pair]`;

exports[`placeOrder, throw error no web3Util 1`] = `[Error: no web3Util initiated]`;

exports[`takeOneSideOrder 1`] = `
Array [
  Array [
    false,
    0.0012,
    20,
    "pair",
  ],
  Array [
    false,
    0.0011,
    10,
    "pair",
  ],
]
`;
